--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   firebase_core: ^1.21.0
   firebase_crashlytics: ^2.8.8
+  salomon_bottom_bar: ^3.3.1
 
 dev_dependencies:
   flutter_test:
